#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(Hex2Str.c)
AM_INIT_AUTOMAKE(Hex2Str, 1.0)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
